--- a/page2.html
+++ b/page2.html
@@ -84,17 +84,14 @@
         </figure>
     </div>
     
-    <div class="footer-content">
+    <!-- <div class="footer-content">
         <p>&copy; 2024 Merci - Інтернет-магазин жіночого одягу. Усі права захищені.</p>
-        <!-- Форма (ОПРАЦЮВАТИ ПРИЙНЯТТЯ ДАНИХ)-->
         <form>
             <label for="email">Електронна пошта:</label>
             <input type="email" id="email" name="email" required>
             <button type="submit">Підписатись</button>
         </form>
-        <!-- Посилання на іншу WEB-сторінку (ОПРАЦЮВАТИ) -->
-        <a href="about.html">Дізнатися більше про нас</a>
-    </div>
+    </div> -->
 
     <div class="gallery">
         <figure>
