--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merci - Інтернет-магазин жіночого одягу</title>
     <link rel="stylesheet" href="webstore.css">
+    <script src="script.js"></script>
+
 </head>
 <body>
     <!-- Header (ОПРАЦЮВАТИ ПОСИЛАННЯ. ЛОГО)-->
