--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.7">
     <title>Merci - Інтернет-магазин жіночого одягу</title>
     <link rel="stylesheet" href="webstore.css">
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
 
 </head>
 <body>
